primer commit a rama cabecera

--- a/Blog de Git.html
+++ b/Blog de Git.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Proyecto del curso de Git</h1>
                 <p>EStos son cambios que se están haciendo para el curso de Git y GitHub</p>
