--- a/Blog de Git.html
+++ b/Blog de Git.html
@@ -7,7 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog
             </div>
             <div id="post">
                 <h1>Proyecto del curso de Git</h1>
