cambio a master antes de fusión de ramas

--- a/Blog de Git.html
+++ b/Blog de Git.html
@@ -9,6 +9,7 @@
             <div id="post">
                 <h1>Proyecto del curso de Git</h1>
                 <p>EStos son cambios que se están haciendo para el curso de Git y GitHub</p>
+                <p>Es muy chévere avanzar en las clases de Git</p>
             </div>
         </div>
     </body>
