--- a/Blog de Git.html
+++ b/Blog de Git.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blog de Git</title>
+        <title>Blog de Git 2.0</title>
         <link rel="stylesheet" href="css/estilos blog.css"/>
     </head>
     <body>
